feat: add MainLayout

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -30,7 +30,8 @@
 			"@entities/*": ["src/entities/*"],
 			"@features/*": ["src/features/*"],
 			"@widgets/*": ["src/widgets/*"],
-			"@pages/*": ["src/pages/*"]
+			"@pages/*": ["src/pages/*"],
+			"@app/*": ["src/app/*"]
 		}
 	},
 	"include": ["src"]
