--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/material": "^7.2.0",
     "@mui/x-data-grid": "^8.9.1",
     "axios": "^1.11.0",
+    "immer": "^10.1.1",
     "path": "^0.12.7",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
